<resources>
    <string name="app_name">Sleep In</string>
    <string name="developer">Sleep In Navigation</string>
    <string name="website">Dagupan Version</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_profile">Personal Profile</string>
    <string name="menu_item_transient">Board and Lodging</string>
    <string name="menu_item_acc">Accommodations</string>
    <string name="menu_item_map">Google Map</string>
    <string name="menu_item_log_out">Log Out</string>


    <string name="name_inputs">|&#032;QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm</string>
    <string name="number_inputs">0987654321-</string>
    <string name="email_inputs">!@#$%^*()_+~{}|:,?/.0987654321-QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm</string>
    <string name="username_password_inputs">.0987654321-QWERTYUIOPASDFGHJKLZXCVBNMqwertyuiopasdfghjklzxcvbnm_</string>
    <string name="google_api_key">AIzaSyA0HyJMLFbzfwuPEiadBnY3JcjoNVhq4qI</string>
    <string name="Apartment">Apartment</string>
    <string name="Bedspace">Bedspace</string>
    <string name="Transient">Transient</string>
    <string name="Others">Others: </string>
    <string-array name="occupation_status">
        <item>Employed</item>
        <item>Unemployed</item>
        <item>Student</item>
    </string-array>
    <string-array name="unit_type">
        <item>Apartment</item>
        <item>Lodge</item>
        <item>Transient</item>
    </string-array>
</resources>
